[brianph-mdb] Fixed panel alignments

--- a/[BRIAN]/brianph-mdb/src/scss/_police.scss
+++ b/[BRIAN]/brianph-mdb/src/scss/_police.scss
@@ -913,7 +913,6 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 50px 1fr;
                     display: grid;
-                    height: 720px;
                  
                     &-header {
 
@@ -1131,7 +1130,6 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 1fr;
                     display: grid;
-                    height: 720px;
 
                     &-placeholder {
 
@@ -1194,7 +1192,6 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 150px 1fr;
                     display: grid;
-                    height: 720px;
 
                     &-header {
 
@@ -1608,7 +1605,6 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 150px 1fr;
                     display: grid;
-                    height: 720px;
 
                     &-header {
 
@@ -2044,7 +2040,6 @@
                     grid-template-columns: 10px 1fr 10px;
                     grid-template-rows: 60px 10px 1fr 10px;
                     display: grid;
-                    height: 720px;
 
                     &-header {
 
@@ -2180,7 +2175,6 @@
                     grid-template-columns: 10px 1fr 10px;
                     grid-template-rows: 60px 10px 1fr 10px;
                     display: grid;
-                    height: 720px;
 
                     &-header {
 
@@ -2392,7 +2386,6 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 50px 1fr;
                     display: grid;
-                    height: 720px;
                  
                     &-header {
 
@@ -2610,7 +2603,6 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 1fr;
                     display: grid;
-                    height: 720px;
 
                     &-placeholder {
 
@@ -2673,7 +2665,6 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 150px 1fr;
                     display: grid;
-                    height: 720px;
 
                     &-header {
 
@@ -3087,7 +3078,6 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 150px 1fr;
                     display: grid;
-                    height: 720px;
 
                     &-header {
 
@@ -3518,7 +3508,6 @@
                     grid-template-columns: 10px 1fr 10px;
                     grid-template-rows: 60px 10px 1fr 10px;
                     display: grid;
-                    height: 720px;
 
                     &-header {
 
@@ -3654,7 +3643,6 @@
                     grid-template-columns: 10px 1fr 10px;
                     grid-template-rows: 60px 10px 1fr 10px;
                     display: grid;
-                    height: 720px;
 
                     &-header {
 
@@ -3863,7 +3851,6 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 50px 1fr;
                     display: grid;
-                    height: 720px;
                  
                     &-header {
 
@@ -4081,7 +4068,6 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 1fr 20px 320px;
                     display: grid;
-                    height: 720px;
 
                     &-placeholder {
 
@@ -4651,7 +4637,6 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 150px 1fr;
                     display: grid;
-                    height: 720px;
 
                     &-header {
 
@@ -5151,7 +5136,6 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 150px 1fr;
                     display: grid;
-                    // height: 720px;
 
                     &-header {
 
@@ -5663,7 +5647,6 @@
                     grid-template-columns: 10px 1fr 10px;
                     grid-template-rows: 60px 10px 1fr 10px;
                     display: grid;
-                    height: 720px;
 
                     &-header {
 
@@ -5799,7 +5782,6 @@
                     grid-template-columns: 10px 1fr 10px;
                     grid-template-rows: 60px 10px 1fr 10px;
                     display: grid;
-                    height: 720px;
 
                     &-header {
 
